[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyForMetrix"
version = "0.0.5"
authors = [
  { name="Lukas Winiwarter", email="lukas.pypi@winiwarter.dev" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies  = [
    "pip>=19.3",
    "laxpy",
    "laspy",
    "numpy",
    "scipy",
    "pandas",
    "tqdm",
    "xarray",
    "matplotlib",
    "shapely",
    "lmoments3",
    "deprecated"
]
#dependencies  = [
#    "pip>=19.3",
#    "laxpy>=0.2.2",
#    "laspy>=2.1.2",
#    "numpy>=1.23.1",
#    "scipy>=1.9.0",
#    "pandas>=1.4.3",
#    "tqdm>=4.64.0",
#    "xarray>=0.20.1",
#    "matplotlib>=3.6.2",
#    "shapely>=1.8.4"
#]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lwiniwar/pyForMetrix"
"Bug Tracker" = "https://github.com/lwiniwar/pyForMetrix/issues"